ops/services/30-bene-prefs/security_group_rules.tf
data "aws_security_group" "db" {
  name = local.db_sg_name
}

resource "aws_vpc_security_group_ingress_rule" "function_db_access" {
  from_port   = 5432
  to_port     = 5432
  ip_protocol = "tcp"
  description = "bene-prefs function access"

  security_group_id            = data.aws_security_group.db.id
  referenced_security_group_id = module.bene_prefs_function.security_group_id
}

resource "aws_vpc_security_group_egress_rule" "db_tcp" {
  from_port   = 5432
  to_port     = 5432
  ip_protocol = "tcp"
  description = "egress to db"

  security_group_id            = module.bene_prefs_function.security_group_id
  referenced_security_group_id = data.aws_security_group.db.id
}
